--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT = 5000
-MONGO = "mongodb+srv://karunyapurasaloor:karunya@cluster0.71qdbnq.mongodb.net/ZenClass?retryWrites=true&w=majority"
+MONGO = "mongodb+srv://karunyapurasaloor:karunya@cluster0.71qdbnq.mongodb.net/?retryWrites=true&w=majority"
 JWT = "test"
